02b. gateway-istio-controller-example/nginx_demo_backend_v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo-v2
  namespace: gateway-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: foo-v2
  template:
    metadata:
      labels:
        app: foo-v2
    spec:
      containers:
      - name: foo
        image: nginxdemos/hello:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: foo-svc-v2
  namespace: gateway-demo
spec:
  selector:
    app: foo-v2
  ports:
  - name: http
    port: 80
    targetPort: 80
