02b. gateway-istio-controller-example/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foo
  namespace: gateway-demo
spec:
  parentRefs:
  - name: prod-web
  rules:
  - backendRefs:
    - name: foo-v1-svc
      port: 80
      weight: 100
    - name: foo-svc-v2
      port: 80
      weight: 0
